--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-         <img src="cenario-passo0.png" alt=""
+            <img src="cenario-passo0.png" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade
                 perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para
                 encontrar essa cidade e eu decide segui-las!</p>
@@ -28,6 +28,13 @@
                 primeira pista.</p>
             <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
             <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+        </div>
+        <div class="passo" id="passo-2">
+            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para
+                localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos
+                da cidade. Por qual você começa?</p>
+            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
+            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
         </div>
     </main>
 
