--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="cenario-passo0.png" alt="">
+            <img src="imagens/cenario-passo0.png" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade
                 perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para
                 encontrar essa cidade e eu decide segui-las!</p>
@@ -43,6 +43,7 @@
         </div>
 
         <div class="passo" id="passo-4">
+            <img src="imagens/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desistindo da aventura">
             <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
                 encontrado.</p>
         </div>
@@ -82,6 +83,8 @@
         </div>
 
         <div class="passo" id="passo-11">
+            <img src="imagens/cenario-passo11-cidade-perdida.png"
+                alt="encontrando uma cidade maravilhosa perdida na Amazônia">
             <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
